Fixed button alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,6 +29,11 @@ body {
     padding-top: 100px;
 }
 
+.floor-info {
+    text-align: left;
+    margin-right: 40px;
+}
+
 .floor-line {
     display: flex;
     align-items: center;
@@ -43,26 +48,19 @@ body {
     flex-grow: 1;
     height: 2px;
     background-color: #000;
-    margin: 0px 20px;
+    margin: 20px -60px;
     overflow-x: auto;
-}
-
-.floor-info {
-    margin-right: 10px;
-    text-align: left;
 }
 
 .button-container {
     display: flex;
     flex-direction: column; 
     gap: 5px;
-    margin-right: 20px; 
-    margin-bottom: 0px;
-    align-items: center; 
+    margin-bottom: 140px;
 }
 
 .button {
-    padding: 5px 10px;
+    padding: 5px;
     background-color: #007BFF;
     color: white;
     border: none;
@@ -83,9 +81,9 @@ body {
 .lifts-container {
     display: flex;
     gap: 10px;
-    justify-content: flex-start;
+    justify-content: left;
     position: absolute;
-    top: -90px;
+    top: -70px;
     left: 200px;
 }
 
@@ -95,7 +93,6 @@ body {
     margin-left: 20px;
     background-color: grey;
     border: 2px solid black;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
